[tool.poetry]
name = "wwwpy-showcase"
version = "0.1.0"
description = ""
authors = ["Raffaele Sgarro <raffaelesgarro@gmail.com>"]
readme = "README.md"
packages = [
    {include = "example-chat"},
    {include = "example-file-upload"},
    {include = "example-markdown"},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
wwwpy = "^0.1.57"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
